feat: atualizacoes gerais de correcoes e novas funcionalidades